--- a/src/hr/app/Dockerfile
+++ b/src/hr/app/Dockerfile
@@ -8,9 +8,7 @@ RUN python3 -m venv /opt/venv
 RUN /opt/venv/bin/pip install pip --upgrade && \
     /opt/venv/bin/pip install -r requirements.txt && \
     chmod +x entrypoint.sh
-
-#chmod +x migrate.sh &&
-
-# RUN sh /app/migrate.sh
+    #chmod +x migrate.sh
+#RUN sh /app/migrate.sh
 
 CMD ["/app/entrypoint.sh"]
