--- a/src/employee/docker-compose.yaml
+++ b/src/employee/docker-compose.yaml
@@ -1,6 +1,17 @@
 version: "3"
 services:
-  postgres_db:
+  employee:
+    depends_on:
+      - postgres_employee
+    build:
+      context: ./app
+      dockerfile: Dockerfile
+    image: burakovali/employee
+    env_file:
+      - ./app/.env
+    ports:
+      - "8001:8001"
+  postgres_employee:
     image: postgres
     restart: always
     command: -p 5440
